--- a/staging.yml
+++ b/staging.yml
@@ -1,12 +1,12 @@
-lighthouse_staging:
-  image: registry.digitwalk.com/lighthouse-node:staging
+urlshortener_staging:
+  image: registry.digitwalk.com/url-shortener:staging
   ports:
     - "5001:3000"
   external_links:
     - influxdb:influxdb
   environment:
     - NODE_ENV=staging
-    - VIRTUAL_HOST=beta.lighthouse.digitwalk.com
+    - VIRTUAL_HOST=urlshortener.digitwalk.com
   log_driver: fluentd
   log_opt:
     fluentd-address: "localhost:24224"
