--- a/production.yml
+++ b/production.yml
@@ -1,9 +1,9 @@
 urlshortener_production:
   image: registry.digitwalk.com/url-shortener:dist
   ports:
-    - "5002:3000"
+    - "5038:3000"
   external_links:
-    - influxdb:influxdb
+    - mongo:mongo
   environment:
     - NODE_ENV=production
     - VIRTUAL_HOST=urlshortener.digitwalk.com
