--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,7 @@
     "node": true
   },
   "rules": {
+    "new-cap": 0,
     "import/default": 0,
     "import/no-duplicates": 0,
     "import/named": 0,
