--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nodemon": "^1.9.1"
   },
   "dependencies": {
+    "@mh/lighthouse-js": "^0.2.2",
     "babel-cli": "^6.6.5",
     "babel-core": "^6.5.2",
     "babel-preset-es2015": "^6.5.0",
