--- a/production.yml
+++ b/production.yml
@@ -7,6 +7,7 @@ urlshortener_production:
   environment:
     - NODE_ENV=production
     - VIRTUAL_HOST=s.maihoo.com
+    - PROJECT_NAME=urlshortener
   log_driver: fluentd
   log_opt:
     fluentd-address: "localhost:24224"
