--- a/.eslintrc
+++ b/.eslintrc
@@ -1,26 +1,11 @@
 {
-  "extends": "airbnb/base",
+  "extends": "airbnb-base",
   "env": {
     "node": true
   },
   "rules": {
     "new-cap": 0,
-    "import/default": 0,
-    "import/no-duplicates": 0,
-    "import/named": 0,
-    "import/namespace": 0,
-    # "import/no-unresolved": 2,
-    "import/no-named-as-default": 2,
     "comma-dangle": 0,
-    "indent": [2, 2, {"SwitchCase": 1}],
-    "no-console": 0,
-    "no-alert": 0,
-    "no-param-reassign": 0,
-  },
-  "settings": {
-    "import/parser": "babel-eslint"
-  },
-  "plugins": [
-    "import"
-  ]
+    "no-console": 0
+  }
 }
