--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "loglevel": "^1.4.0",
     "mongoose": "^4.4.13",
     "morgan": "^1.7.0",
+    "raven": "^0.11.0",
     "rimraf": "^2.5.2",
     "shortid": "^2.2.6"
   }
