--- a/staging.yml
+++ b/staging.yml
@@ -6,7 +6,7 @@ urlshortener_staging:
     - mongo:mongo
   environment:
     - NODE_ENV=staging
-    - VIRTUAL_HOST=urlshortener.digitwalk.com
+    - VIRTUAL_HOST=u.digitwalk.com,urlshortener.digitwalk.com
     - PROJECT_NAME=urlshortener_staging
   log_driver: fluentd
   log_opt:
